tests/ui_fail/free_conn.stderr
error[E0505]: cannot move out of `env` because it is borrowed
  --> tests/ui_fail/free_conn.rs:15:5
   |
11 |     let env = get_env_handle();
   |         --- binding `env` declared here
12 |     let (conn, _) = SQLHDBC::SQLAllocHandle(&env);
   |                                             ---- borrow of `env` occurs here
...
15 |     env.SQLFreeHandle();
   |     ^^^ move out of `env` occurs here
16 |     conn.SQLFreeHandle();
   |     ---- borrow later used here
